--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
       gtag("config", "G-TTJ311MHZG");
     </script>
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.png" />
-    <link rel="stylesheet" href="/umi.a73c12a2.css" />
+    <link rel="stylesheet" href="./umi.a73c12a2.css" />
     <script>
-      window.routerBase = "/";
+      window.routerBase = "./";
     </script>
     <script>
       //! umi version: 3.5.40
@@ -37,6 +37,6 @@
   <body>
     <div id="root"></div>
 
-    <script src="/umi.6d452693.js"></script>
+    <script src="./umi.be0aec9c.js"></script>
   </body>
 </html>
