--- a/limit.html
+++ b/limit.html
@@ -15,9 +15,9 @@
       gtag("config", "G-TTJ311MHZG");
     </script>
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.png">
-    <link rel="stylesheet" href="/umi.a73c12a2.css">
+    <link rel="stylesheet" href="./umi.a73c12a2.css">
     <script>
-      window.routerBase = "/";
+      window.routerBase = "./";
     </script>
     <script>
       //! umi version: 3.5.40
@@ -30,7 +30,7 @@
   window.g_initialProps = {};
 	</script>
 
-    <script src="/umi.6d452693.js"></script>
+    <script src="./umi.be0aec9c.js"></script>
   
 
 </body></html>
