--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       gtag("js", new Date());
       gtag("config", "G-TTJ311MHZG");
     </script>
-    <link rel="shortcut icon" type="image/x-icon" href="./favicon.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.png" />
     <link rel="stylesheet" href="./umi.a73c12a2.css" />
     <script>
       window.routerBase = "./";
@@ -37,6 +37,6 @@
   <body>
     <div id="root"></div>
 
-    <script src="./umi.2b4d5035.js"></script>
+    <script src="./umi.7818180b.js"></script>
   </body>
 </html>
