--- a/limit.html
+++ b/limit.html
@@ -14,7 +14,7 @@
       gtag("js", new Date());
       gtag("config", "G-TTJ311MHZG");
     </script>
-    <link rel="shortcut icon" type="image/x-icon" href="/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="./favicon.png">
     <link rel="stylesheet" href="./umi.a73c12a2.css">
     <script>
       window.routerBase = "./";
